# assistant-api

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.elasticsearch  Dockerfile.kibana  README.md  app.py  cloudbuild.yaml  docker-compose.yml  elastic_connector.py  elasticsearch.yml  event_handler.py  filebeat.yml  index.html  index_begin.html  kibana.yml  openai_assistant.py  pyproject.toml  requirements.txt  start.sh  thread_manager.py  utils.py
.github/: FUNDING.yml
.github/workflow/: package-docker.yml
.github/workflows/: package-docker.yml
app/: main.py
app/models/: models.py
app/routes/: chat_routes.py
app/ws/: flask_config.py  message_data.py
elasticsearch/: Dockerfile  elasticsearch.sh  elasticsearch.yml
elasticsearch/config/: elasticsearch.yml
frontend/: chat-widget.js  index.html  package-lock.json  package.json  server.js
kibana/: Dockerfile  kibana.sh  kibana.yml
kibana/config/: kibana.yml
logstash/pipeline/: logstash.conf
managers/elastic/: conversation_manager.py  document_manager.py  elastic_connector.py  models.py  search_manager.py
managers/google/: sms_handler.py
managers/openai/: event_manager.py  thread_manager.py
models/: models.py
routes/: chat_routes.py
scripts/: init-elasticsearch.sh  kibana.sh  start.sh
terraform/: armor-policy.tf  cloud-run.tf  load-balancer.tf  main.tf  parameters.tf  providers.tf  secrets.tf  trigger.tf
utils/: markdown_stripper.py  url_utility.py
widget/:  webpack.config.js  .gitignore  package.json  webpack.config.js
ws/: flask_config.py  gunicorn_config.py  message_data.py
(+38 files in other folders)
