[tool.poetry]
name = "openai-assistants-api"
version = "1.0.0"
description = "A Backend application leverging OpenAI AssistantAPI"
authors = ["William Zebrowski <38896109+williamzebrowskI@users.noreply.github.com>"]
license = "Transform.AI"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
elasticsearch = "^8.13.2"
flask = "^3.0.3"
flask-socketio = "^5.3.6"
openai = "^1.30.4"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
eventlet = "^0.36.1"
requests = "^2.32.2"
attr = "^0.3.2"
scikit-learn = "^1.5.0"
joblib = "^1.4.2"
torch = "^2.3.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"